feature: add movement views
