# app/controllers/movements_controller.rb
@@ -1,0 +1,18 @@
+class MovementsController < ApplicationController
+  before_action :set_store
+  before_action :set_movement, only: %i[ show ]
+  def index
+    @movements = @store.movements.page(params[:page])
+  end
+
+  def show; end
+
+  private
+    def set_store
+      @store = Store.find(params[:store_id])
+    end
+
+    def set_movement
+      @movement = @store.movements.find(params[:id])
+    end
+end
