# config/routes.rb
@@ -15,5 +15,7 @@ Rails.application.routes.draw do
   # root "posts#index"
 
   resources :importers, except: %i[edit update destroy]
-  resources :stores, only: %i[index show]
+  resources :stores, only: %i[index show] do
+    resources :movements, only: %i[index show]
+  end
 end
